--- a/readme.adoc
+++ b/readme.adoc
@@ -12,3 +12,10 @@ TIP: la documentation est aussi disponible dans les livrables du repository gith
 ** Une série de 3 TP dans les répertoires `tp1-2` et `tp3` permettant de réaliser le lab
 
 Merci de vous référer à la documentation pour plus d'informations sur le lab.
+
+## Opening the workspace in GitPod
+
+To open the workspace, simply click on the *Open in Gitpod* button, or use https://gitpod.io/#https://github.com/SCIAM-FR/quarkus-iginite-lab.git.
+
+
+image::https://gitpod.io/button/open-in-gitpod.svg[link=https://gitpod.io/#https://github.com/SCIAM-FR/quarkus-iginite-lab.git]
