--- a/doc/src/main/asciidoc/tp1.adoc
+++ b/doc/src/main/asciidoc/tp1.adoc
@@ -34,7 +34,7 @@ For Linux/Mac from ignite module root:
 cd ./target/apache-ignite-2.14.0-bin
 export OPTION_LIBS=ignite-rest-http,ignite-calcite
 export CONFIG_URI=file://config/node-configuration.xml
-export JVM_OPTS="-Xms256m -Xmx512m -server -XX:MaxMetaspaceSize=256m -XX:MaxDirectMemorySize=256m"
+export JVM_OPTS="-Xms256m -Xmx512m -server -XX:MaxMetaspaceSize=256m -XX:MaxDirectMemorySize=256m --add-opens java.base/java.lang.invoke=ALL-UNNAMED"
 ./bin/ignite.sh
 ----
 
@@ -44,7 +44,7 @@ For Windows PowerShell:
 ----
 $env:OPTION_LIBS = 'ignite-rest-http,ignite-calcite'
 $env:CONFIG_URI = 'file://config/node-configuration.xml'
-$env:JVM_OPTS = '-Xms256m -Xmx512m -server -XX:MaxMetaspaceSize=256m -XX:MaxDirectMemorySize=256m'
+$env:JVM_OPTS = '-Xms256m -Xmx512m -server -XX:MaxMetaspaceSize=256m -XX:MaxDirectMemorySize=256m --add-opens java.base/java.lang.invoke=ALL-UNNAMED'
 ./target/apache-ignite-2.14.0-bin/bin/ignite.bat
 ----
 
