--- a/doc/src/main/asciidoc/tp2.adoc
+++ b/doc/src/main/asciidoc/tp2.adoc
@@ -88,7 +88,7 @@ create table if not exists OPERATIONS
     accountId varchar(40),
     amount decimal(10,2),
     primary key (id, accountId)
-) with "TEMPLATE=PARTITIONED,BACKUPS=2,AFFINITY_KEY=accountId,CACHE_NAME=operations,VALUE_TYPE=fr.sciam.lab.ignite.model.Operation,KEY_TYPE=ffr.sciam.lab.ignite.model.OperationKey";
+) with "TEMPLATE=PARTITIONED,BACKUPS=2,AFFINITY_KEY=accountId,CACHE_NAME=operations,VALUE_TYPE=fr.sciam.lab.ignite.model.Operation,KEY_TYPE=fr.sciam.lab.ignite.model.OperationKey";
 ----
 
 To apply these scripts, we will run them by creating a REST service in Quarkus. Create a class called CreateSchemas:
